--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="" />
     <title>Reproduzindo métodos</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Abra o console do navegador para ver os resultados</h1>
     <script src="./src/scripts/metodos.js"></script>
-</body>
+    <ul></ul>
+  </body>
 </html>
