--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="" />
+
     <title>Reproduzindo métodos</title>
   </head>
   <body>
     <h1>Abra o console do navegador para ver os resultados</h1>
-    <script src="./src/scripts/metodos.js"></script>
-    <ul></ul>
+
+    <!-- <script src="./src/scripts/metodos.js"></script> -->
+    <script src="./src/scripts/metodos2.js"></script>
   </body>
 </html>
